tried to fix the spacing of the header

--- a/day.css
+++ b/day.css
@@ -2,10 +2,16 @@ body {
   background-color: #E6E6E6;
   margin-top: 0px;
   margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 #title {
   color: #1A1A1A;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
   text-align: center;
   font-family: 'Lato', sans-serif;
   font-size: 72px;
@@ -33,8 +39,13 @@ body {
 }
 
 #linklist {
+  position: fixed;
+  right: 0px;
+  left: 0px;
+  top: 0px;
   font-family: 'Raleway', sans-serif;
-  column-count:4 ;
+  font-size-adjust: none;
+  column-count: 4;
   background-color: #111111;
   border: 3px solid #f76e23
 }
@@ -45,6 +56,7 @@ body {
   color: #f76e23;
   transition: color 0.3s linear;
   font-size: 25px;
+  font-size-adjust: none;
   padding: 30px;
 }
 #linklist a:hover {
