--- a/night.css
+++ b/night.css
@@ -2,6 +2,8 @@ body {
   background-color: #1A1A1A;
   margin-top: 0px;
   margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 #title {
@@ -9,6 +11,10 @@ body {
   text-align: center;
   font-family: 'Lato', sans-serif;
   font-size: 24px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
   text-shadow:
     -1px -1px 0 #f76e23,
     1px -1px 0 #f76e23,
@@ -33,7 +39,12 @@ body {
 }
 
 #linklist {
+  position: fixed;
+  right: 0px;
+  left: 0px;
+  top: 0px;
   font-family: 'Raleway', sans-serif;
+  font-size-adjust: none;
   column-count:4;
   background-color: #111111;
   border: 3px solid #f76e23
@@ -46,6 +57,7 @@ body {
   transition: color 0.3s linear;
   font-size: 25px;
   padding: 30px;
+  font-size-adjust: none;
 }
 #linklist a:hover {
   color: #FFFFFF;
